# ddd

./: .eslintrc.yml  .gitignore  .travis.yml  db.py  ddd.py  dump_csvs.sh  dump_csvs.sql  markov.py  package.json  pnpm-lock.yaml  prepare_db.py  pylintrc  pyproject.toml  requirements.txt  splitter.py  tsconfig.json  update_data.sh
.github/workflows/: ci.yaml
processed/: ddd.js  index.html  style.css
static/: ddd.js  dropdown.css  dropdown.js  emoji.css  emoji.js  markov.js  style.css
templates/: base.html  emoji.html  guild.html  index.html  markov.html
ts/: ddd.mts  ddd.ts  dropdown.mts  emoji.ts  lit_dropdown.mts  markov.ts  message_graph.mts
