[project]
name = 'ddd'
version = '0'
dependencies = [
	'jinja2',
	'pigwig',
	'py-lz4framed',
	'sqlalchemy',
	'waitress',
]
[dependency-groups]
dev = [
    'ruff',
]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
	'E', 'F',
	'YTT', 'COM', 'T10', 'ISC', 'G', 'PIE', 'Q', 'RSE',
	'PLC', 'PLE',
	'RUF',
]
[tool.ruff.lint.flake8-quotes]
docstring-quotes = 'single'
inline-quotes = 'single'
multiline-quotes = 'single'
[tool.ruff.lint.isort]
lines-after-imports = 1
